--- a/styles/main.css
+++ b/styles/main.css
@@ -288,6 +288,10 @@ nav ul li a:hover {
     gap: 150px;
 }
 
+.sponspors_logo img {
+    filter: grayscale(100%);
+}
+
 /* footer styles */
 .footer {
     margin: 0 240px 216px;
