--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -103,6 +103,16 @@
         gap: 25px;
     }
 
+    /* customer review styles */
+    .customer_review {
+        margin: 80px 20px;
+    }
+
+    .review_box {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+
     /* sponspors responsive */
     .sponspors {
         margin: 90px 20px;
@@ -174,6 +184,15 @@
         gap: 25px;
     }
 
+    /* customer review styles */
+    .customer_review {
+        margin: 80px 50px;
+    }
+
+    .review_box {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
 
     /* sponspors responsive */
     .sponspors {
@@ -269,6 +288,15 @@
         gap: 25px;
     }
 
+    /* customer review styles */
+    .customer_review {
+        margin: 80px 0;
+    }
+
+    .review_box {
+        grid-template-columns: repeat(23 1fr);
+        gap: 30px;
+    }
 
     /* sponspors responsive */
     .sponspors {
